--- a/04/module4.ipynb
+++ b/04/module4.ipynb
@@ -11,16 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Neural Network Implementation with NumPy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "def step(x):\n",
+    "    \"\"\"\n",
+    "    Implements a simple step function.\n",
+    "    \n",
+    "    Args:\n",
+    "        x: A number or numpy array\n",
+    "    \n",
+    "    Returns:\n",
+    "        1 if x > 0, 0 otherwise\n",
+    "    \"\"\"\n",
     "    if x > 0:\n",
     "        return 1\n",
     "    else:\n",
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +61,7 @@
        "0"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -110,20 +135,19 @@
        "array([ True,  True, False, False,  True])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
     "x = np.array([1, 200, -2, 0, 500])\n",
     "x > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +156,7 @@
        "array([1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +187,7 @@
        "array([1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +205,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "    Utility function to plot mathematical functions.\n",
+    "    \n",
+    "    Args:\n",
+    "        func: The function to plot\n",
+    "        title: Title for the plot\n",
+    "        x_range: Tuple of (min_x, max_x) for plotting\n",
+    "    \"\"\"\n",
+    "x = np.arange(-10.0, 10.0, 0.1)\n",
+    "y = step(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -196,9 +247,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "x = np.arange(-10.0, 10.0, 0.1)\n",
-    "y = step(x)\n",
     "plt.plot(x, y)\n",
     "plt.title('my greatest step_function ever')\n",
     "plt.show()"
@@ -213,11 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
+    "    \"\"\"\n",
+    "    Implements the sigmoid activation function.\n",
+    "    \n",
+    "    Args:\n",
+    "        x: Input value or numpy array\n",
+    "    \n",
+    "    Returns:\n",
+    "        The sigmoid of x: 1/(1 + e^(-x))\n",
+    "    \"\"\"\n",
     "    return 1/(1 + np.exp(-x))"
    ]
   },
@@ -230,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,15 +341,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,) (2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[180], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,) (2,3) "
+     ]
+    }
+   ],
    "source": [
-    "Operands could not be broadcast together with shapes (2,) (2,3)bif directly done x*w hence use np.dot"
+    "x * w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +381,7 @@
        "(2,)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +401,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +465,7 @@
        "array([3.480796 , 3.4266368, 1.7041592])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +494,7 @@
        "array([0.97013639, 0.96852671, 0.84607717])"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +541,7 @@
        "array([1.26757494, 1.37971019])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +570,7 @@
        "array([0.78032733, 0.79894445])"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.7444993 , 0.52890129])"
+       "array([0.6444993 , 0.32890129])"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,12 +649,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make some functions to do MLP more easily"
+    "### Make some fucntions to do MLP more easily"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +712,7 @@
        "array([0.75050477, 0.53158747])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +804,7 @@
        "array([0.75050477, 0.53158747])"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,6 +812,13 @@
    "source": [
     "y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
